add cv website files

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="18">
     <tr>
-      <td> <img src="images\sowmiya.jpg"></td>
+      <td> <img src="images\doll.jpg"></td>
       <td>
         <h1>
           <strong>Sowmiya</strong>
