--- a/Hobbies.html
+++ b/Hobbies.html
@@ -9,8 +9,8 @@
 <body>
   <h3>Hobbies</h3>
   <ol start="5">
-    <li ><a href="https://in.video.search.yahoo.com/search/video?fr=mcafee&p=songs#id=2&vid=ea4ce595777821af85540e3b8ca7390d&action=click" ">Listening Music</a></li>
-      <li><a href="https://www.youtube.com/watch?v=vmEmvUtqcMA">Cooking</a></li>
+    <li class="Activity" ><a href="https://in.video.search.yahoo.com/search/video?fr=mcafee&p=songs#id=2&vid=ea4ce595777821af85540e3b8ca7390d&action=click" ">Listening Music</a></li>
+      <li class="Activity"><a href="https://www.youtube.com/watch?v=vmEmvUtqcMA">Cooking</a></li>
     <li>Google Surfing</li>
 
   </ol>
