--- a/Contact Details.html
+++ b/Contact Details.html
@@ -24,7 +24,7 @@
     <br>
     <br>
     <label >Message to us:</label>
-  <textarea name="Your Message" rows="15" cols="30"></textarea><br>
+  <textarea name="Your Message" rows="15" cols="30" autofill></textarea><br>
   <br>
 
   <input type="submit" name="" value="Submit"
